--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">menuHw</string>
     <string name="contact_us">Contact us</string>
     <string name="setting">Setting</string>
-    <string name="logout">Logout</string>
+
     <string name="login">login</string>
     <string name="main_activity">Main Activity</string>
     <string name="sitting">sitting</string>
+    <string name="hello">Hello</string>
+    <string name="logout">logout</string>
 
 </resources>
